src/test/ui/rust-2018/uniform-paths/redundant.rs
// edition:2018

#![feature(uniform_paths)]

use std;

fn main() {}
